[package]
name = "stock-symbol"
version = "0.1.0"
edition = "2021"
authors = ["Cassy343"]

description = "A data type for representing stock symbols."
repository = "https://github.com/Cassy343/stock-symbol"
license = "MIT"
readme = "README.md"

keywords = ["symbol", "stock", "string"]
categories = ["data-structures", "compression"]

[dependencies]

[dependencies.serde]
version = "1"
optional = true

[dependencies.sqlx-core]
version = "0.6.1"
default-features = false
optional = true

[features]
default = []
sqlx = ["sqlx-core"]
sqlx-actix-native-tls = ["sqlx", "sqlx-core/runtime-actix-native-tls"]
sqlx-async-std-native-tls = ["sqlx", "sqlx-core/runtime-async-std-native-tls"]
sqlx-tokio-native-tls = ["sqlx", "sqlx-core/runtime-tokio-native-tls"]
sqlx-actix-rustls = ["sqlx", "sqlx-core/runtime-actix-rustls"]
sqlx-async-std-rustls = ["sqlx", "sqlx-core/runtime-async-std-rustls"]
sqlx-tokio-rustls = ["sqlx", "sqlx-core/runtime-tokio-rustls"]
