[package]
name = "stock-symbol"
version = "0.4.0"
edition = "2021"
authors = ["Cassy343"]

description = "A data type for representing stock symbols."
repository = "https://github.com/Cassy343/stock-symbol"
license = "MIT"
readme = "README.md"

keywords = ["symbol", "stock", "string"]
categories = ["data-structures", "compression"]

[dependencies]

[dependencies.serde]
version = "1"
optional = true

[dependencies.sqlx-core]
version = "0.7.3"
default-features = false
optional = true

[features]
default = []
sqlx = ["dep:sqlx-core"]
